# user-sync-lambda

./: Cargo.toml
src/: main.rs
