[package]
name = "registration_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.82"
serde = "1.0.142"
lambda_runtime = "0.6.0"
lambda_http = { version = "0.6.0", default-features = true }
aws_lambda_events = "0.6.3"
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "chrono" ] }
uuid = { version = "1.1.2", features = ["serde", "v4"]}
env_logger = "0.9.0"